Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p>
         <a href="./Gallery.html" class="btn btn-primary my-2">Gallery</a>
         <a href="./Shop.html" class="btn btn-secondary my-2">Shop</a>
-		<a href="./About.html" class="btn btn-secondary my-2">About</a>
+        <a href="./About.html" class="btn btn-secondary my-2">About</a>
       </p>
     </div>
   </section>
@@ -218,7 +218,7 @@
 <footer class="text-muted">
   <div class="container">
     <p class="float-right">
-      <a href="Index.html">Back to top</a>
+      <a href="index.html">Back to top</a>
     </p>
     <p>Designed by &copy; Dejion O. Duncan,</p>
     <p>BASEFORYOURFACE <a href="index.html">Visit the homepage</a></p>
