--- a/Shop.html
+++ b/Shop.html
@@ -61,7 +61,7 @@
       <p class="lead text-muted">💘 ⦿ Culture Over Everything ⦿ 💘</p>
       <p>
         <a href="Gallery.html" class="btn btn-primary my-2">Gallery</a>
-        <a href="Index.html" class="btn btn-secondary my-2">Home</a>
+        <a href="index.html" class="btn btn-secondary my-2">Home</a>
         <a href="Shop.html" class="btn btn-secondary my-2">Shop</a>
         <a href="https://society6.com/baseforyourface" class="btn btn secondary my-2"><img src="Assets/society6-logo.png" width= "100" alt="society6"></a>
       </p>
@@ -76,7 +76,7 @@
                 <p class="tm-copyright-text">Copyright &copy;
                 
                  | Design: <a href="Gallery.html" target="_parent">Dejion O. Duncan</a></p>
-    <p>BASEFORYOURFACE <a href="Index.html">Visit the homepage</a></p>
+    <p>BASEFORYOURFACE <a href="index.html">Visit the homepage</a></p>
 
   </footer>
 </body>
