--- a/Gallery.html
+++ b/Gallery.html
@@ -78,7 +78,7 @@ http://www.templatemo.com/tm-500-fluid-gallery
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item active selected">
-                                    <a class="nav-link" href="Index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="./About.html">About</a>
@@ -279,7 +279,7 @@ http://www.templatemo.com/tm-500-fluid-gallery
                 <p class="tm-copyright-text">Copyright &copy;
                 
                  | Design: <a href="Gallery.html" target="_parent">Dejion O. Duncan</a></p>
-    <p>BASEFORYOURFACE <a href="Index.html">Visit the homepage</a></p>
+    <p>BASEFORYOURFACE <a href="index.html">Visit the homepage</a></p>
 
             </footer>
                     
