--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
 	<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
   <img src="Assets/MyLogo.png" width="200" height="150" alt="logo">
   <nav class="my-2 my-md-0 mr-md-3">
-    <a class="p-2 text-dark" href="./Index.html">Home</a>
+    <a class="p-2 text-dark" href="./index.html">Home</a>
     <a class="p-2 text-dark" href="./Gallery.html">Gallery</a>
     <a class="p-2 text-dark" href="./Shop.html">Shop</a>
     <a class="p-2 text-dark" href="./About.html">About</a>
@@ -68,7 +68,7 @@
       <a href="About.html">Back to top</a>
     </p>
     <p>Designed by &copy; Dejion O. Duncan,</p>
-    <p>BASEFORYOURFACE <a href="Index.html">Visit the homepage</a></p>
+    <p>BASEFORYOURFACE <a href="index.html">Visit the homepage</a></p>
   </div>
 </footer>
 
