--- a/Gallery.html
+++ b/Gallery.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type = "text/css">
           body {
-  background-image: url('assets/background-image.jpg');
+  background-image: url('Assets/backgroundimage.jpg');
 }
         h1 {
-            background-image: url('assets/background-image.jpg');background-image: url("background-for-webpage.png");
+            background-image: url('Assets/backgroundimage.jpg');background-image: url("background-for-webpage.png");
         }
         p {
         background-color: white;
@@ -217,21 +217,21 @@ http://www.templatemo.com/tm-500-fluid-gallery
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-sadie">
-                                            <img src="Assets/YouCan_tMakeMe.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="Assets/YouCantMakeMe.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"><span><strong>"YCMM"</strong></span></h2>
                                                 <p class="tm-figure-description"></p>
-                                                <a href="Assets/YouCan_tMakeMe.jpg">View more</a>
+                                                <a href="Assets/YouCantMakeMe.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-sadie">
-                                            <img src="Assets/IMG_0311.JPG" alt="Image" class="img-fluid tm-img">
+                                            <img src="Assets/IMG0311.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"><span><strong>"Exasperation & Desperation"</strong></span></h2>
                                                 <p class="tm-figure-description"></p>
-                                                <a href="Assets/IMG_0311.JPG">View more</a>
+                                                <a href="Assets/IMG0311.JPG">View more</a>
                                             </figcaption>          
                                         </figure>
                                     </div>
