--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
  <style type = "text/css">
  body {
-  background-image: url('assets/background-image.jpg');
+  background-image: url('Assets/backgroundimage.jpg');
 }
   h1 {
-  background-image: url('assets/background-image.jpg');
+  background-image: url('Assets/backgroundimage.jpg');
 }
   p {
   background-color: white;
@@ -34,7 +34,7 @@
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
             <li><a href="https://instagram.com/baseforyourface" class="text-white">Follow on Instagram</a></li>
-            <li><a href="mailto:djuncan30@gmail.com"><img src="assets/icons8-envelope-26.png" width="16">Email Me</a></li>
+            <li><a href="mailto:djuncan30@gmail.com"><img src="Assets/envelope.png" width="16">Email Me</a></li>
             <li><a href="tel:469-278-1757" class="text-white">Call me</a></li>
           </ul>
         </div>
@@ -73,8 +73,8 @@
     <button onclick="makeNormal()">Normal</button>
     <br><br>
     <video id="video1" width="420">
-      <source src="assets/Dejion_4.mp4" type="video/mp4">
-      <source src="Dejion_4.ogg" type="video/ogg">
+      <source src="Assets/Dejion4.mp4" type="video/mp4">
+      <source src="Dejion4.ogg" type="video/ogg">
       Your browser does not support HTML5 video.
     </video>
   </div> 
