--- a/About.html
+++ b/About.html
@@ -6,9 +6,10 @@
 <link href="album.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/d1341f9b7a.js"></script>
  <style type = "text/css">
   body {
-  background-image: url('assets/background-image.jpg');
+  background-image: url('Assets/backgroundimage.jpg');
 }
   p {
   background-color: white;
@@ -40,39 +41,28 @@
 	<h2>Dejion Duncan</h2>
 	<h5>Designer - Graphic Artist</h5>
 	<p2>My name is Dejion O’ Marie Duncan. I was born and raised in the city of Dallas but spent most of my life in Cedar Hill. Currently, I attend the University of North Texas and my major is in Technical Communication. I have always been interested in art since I was young. I made little comic books with my friends and drew different characters and animations, but I never realized my potential as an artist at the time. In actuality, my passion and admiration for film and video editing grew heavily in high school. At Cedar Hill High School, I participated in all sorts of projects that involved working with athletes, thespians, dancers, and amongst many other creative people. It was not until recently that I decided to start creating graphic art because I wanted to expand my capabilities in regards to how I produce peculiar-looking artwork. I wanted to see the extent to which I could push myself into trying new things, and I wanted to express myself in another way that depicts the world in a new light. Having said that, I noticed that a program like photoshop pairs very well with video editing programs. To me, it would have been a waste to not see what I could do with these programs. Since then, I have littered my social media with my art and have gotten a few clients and purchases. Nevertheless, I hope to continue to grow as an artist as a means to increase my skill level and clientele.</p2>
-	
-	  <ul class= "socials" style="text-align:center">
-                  <a href="http://instagram.com/baseforyourface"><img src="Assets/instagram.png" width="82" height="86" title="IG Logo" alt="Flower"></a> <a href="https://www.linkedin.com/in/dejion-duncan-05824678"><img src="Assets/linkdenlogo.png" width="82" height="86" title="logo" alt="LinkdIn"></a> <a href="https://www.behance.net/baseforyourface"><img src="Assets/behancelogo.png" width="82" height="82S" title="Behance Logo" alt="Flower"></a>
+	<ul>
+   <li><a href="http://instagram.com/baseforyourface"><i class="fa fa-instagram" aria-hidden="true"></i></a></li> 
+   <li><a href="https://www.linkedin.com/in/dejion-duncan-05824678"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+   <li><a href="https://www.behance.net/baseforyourface"><i class="fa fa-behance-square" aria-hidden="true"></i></a></li>
 	</ul>
 	</div>
 	
-        <footer  class="container-fluid">
-            <div class="row">
-                <div class="col mailto">
-                    <a href="mailto:djuncan30@gmail.com"><img src="Assets/envelope.png" width="16"/>Contact Me</a> 
-                </div>
-                <div class="col sociallinks">
-                    <a href="https://twitter.com/baseforyourface"><img src="Assets/twitter.png" width="16"/></a>
-                    <a href="https://www.facebook.com/dejion.duncan"><img src="Assets/facebook.png"  width="16"/></a>
-                </div>    
-            </div>
-            <script type="text/javascript">!--
-              s6_user;"baseforyourface";
-              s6_format = "300x250";
-              //--></script>
-              <script type="text/javascript" src="https://society6.com/js/show_banner.js">
-              </script>
 <footer class="text-muted">
   <div class="container">
+    <div class="row">
+      <div class="col mailto">
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col mailto">
     <p class="float-right">
       <a href="About.html">Back to top</a>
     </p>
-    <p>Designed by &copy; Dejion O. Duncan,</p>
+    <p>Designed by &copy; Dejion O. Duncan <p href="mailto:djuncan30@gmail.com"> <img src="Assets/envelope.png" width="16"/>Contact Me</p><p href="https://twitter.com/baseforyourface"><img src="Assets/twitter.png" width="16 href="https://www.facebook.com/dejion.duncan"><img src="Assets/facebook.png"  width="16"/></p>
     <p>BASEFORYOURFACE <a href="index.html">Visit the homepage</a></p>
   </div>
 </footer>
-
-</div>
 
 </body>
 </html>
