--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">About Me</h1>
-  <p class="lead">>💘 ⦿ Culture Over Everything ⦿ 💘</p>
+  <p class="lead">💘 ⦿ Culture Over Everything ⦿ 💘</p>
 </div>
 
 <div class="box">
@@ -41,11 +41,13 @@
 	<h2>Dejion Duncan</h2>
 	<h5>Designer - Graphic Artist</h5>
 	<p2>My name is Dejion O’ Marie Duncan. I was born and raised in the city of Dallas but spent most of my life in Cedar Hill. Currently, I attend the University of North Texas and my major is in Technical Communication. I have always been interested in art since I was young. I made little comic books with my friends and drew different characters and animations, but I never realized my potential as an artist at the time. In actuality, my passion and admiration for film and video editing grew heavily in high school. At Cedar Hill High School, I participated in all sorts of projects that involved working with athletes, thespians, dancers, and amongst many other creative people. It was not until recently that I decided to start creating graphic art because I wanted to expand my capabilities in regards to how I produce peculiar-looking artwork. I wanted to see the extent to which I could push myself into trying new things, and I wanted to express myself in another way that depicts the world in a new light. Having said that, I noticed that a program like photoshop pairs very well with video editing programs. To me, it would have been a waste to not see what I could do with these programs. Since then, I have littered my social media with my art and have gotten a few clients and purchases. Nevertheless, I hope to continue to grow as an artist as a means to increase my skill level and clientele.</p2>
-	<ul>
+
+  <ul class="socials">
    <li><a href="http://instagram.com/baseforyourface"><i class="fa fa-instagram" aria-hidden="true"></i></a></li> 
    <li><a href="https://www.linkedin.com/in/dejion-duncan-05824678"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
    <li><a href="https://www.behance.net/baseforyourface"><i class="fa fa-behance-square" aria-hidden="true"></i></a></li>
-	</ul>
+   <li><a href="Assets/DejionResume.pdf">Resume</a></li>
+  </ul>
 	</div>
 	
 <footer class="text-muted">
